--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @use 'variaveis';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
 
 @font-face{
     font-family: Avenir;
@@ -21,7 +24,7 @@
     color: variaveis.$corTextoPrincipal;
 }
 
-@mixin title($fontSize: 28px){
+@mixin title($fontSize: 40px){
     @include text($fontSize);
     color: variaveis.$corTextoSecundario;
 }
@@ -30,7 +33,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Avenir,  sans-serif;
+    font-family: Avenir, sans-serif;
 }
 
 body {
@@ -58,15 +61,15 @@ body {
 }
 
 .title--big{
-    @include text(44px);
+    @include title(44px);
 }
 
 .title{
-    @include text;
+    @include title;
 }
 
 .title--small{
-    @include text(28px);
+    @include title(28px);
 }
 
 .button{
@@ -80,4 +83,46 @@ body {
     border-radius: 4px;
     margin-top: 2vw;
     margin-bottom: 8px;
+}
+
+.image-text-section{
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    img{
+        max-width: 100%;
+    }
+
+    &__text_container{
+        padding: 0 2vw;
+
+        h2{
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width{
+        display: block;
+        position: relative;
+        
+
+        img{
+            width: 100%;
+        }
+
+        &__text_container{
+            position: absolute;
+            top: 0;
+            left: 50%;
+            width: calc(50% - 5.6vw);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            
+        }
+
+    }
 }
